# BsDiff_And_Patch

./: README.md
app/: CMakeLists.txt  build.gradle
app/demoapk/: new.apk  old.apk  patch.patch
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: bs.c  bs.h  bspatch.c  bspatch.h  native-lib.cpp
app/src/main/cpp/bzip2/: dlltest.c  mk251.c
app/src/main/java/com/example/bjqt/testndk/: MainActivity.java
app/src/main/java/com/example/bjqt/testndk/util/: BsPatch.java  IncremUpgrade.java
app/src/main/java/com/jarry/bspatch/: MainActivity.java
app/src/main/java/com/jarry/bspatch/util/: BsPatch.java  IncremUpgrade.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_path.xml
bspatchlib/: CMakeLists.txt  build.gradle
bspatchlib/src/androidTest/java/com/example/bspatchlib/: ExampleInstrumentedTest.java
bspatchlib/src/main/: AndroidManifest.xml
bspatchlib/src/main/cpp/: bs.c
bspatchlib/src/main/cpp/bzip2/: bzip2recover.c  spewG.c  unzcrash.c
bspatchlib/src/main/java/com/jarry/bspatch/util/: BsPatch.java  IncremUpgrade.java
bspatchlib/src/main/res/values/: strings.xml
bspatchlib/src/test/java/com/example/bspatchlib/: ExampleUnitTest.java
